--- a/screen2.css
+++ b/screen2.css
@@ -23,13 +23,14 @@
   .grid-container {
     display: grid;
     grid-template-columns: 20% auto 20%;
-    grid-template-rows: 10% auto;
+    grid-template-rows: 17% 85%;
+
   }
 
   .titlu {
     text-align: center;
     position: relative;
-    font-size: 70px;
+    font-size: 10vh;
     font-weight: bold;
     font-style: italic;
     color: rgb(58, 0, 253);
@@ -55,23 +56,23 @@
     grid-row: 2;
     grid-column: 1 / span 1;
     background-color: rgba(96, 107, 218, 0.4);
-    margin-bottom: 10px;
-    border-radius: 100px;
+    margin-bottom: 1%;
+    border-radius: 100vh;
   }
 
   .grid-item:nth-child(3) {
     grid-row: 2;
     grid-column: 2 / span 2;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 1%;
+    padding-right: 12%;
   }
 
   .grid-item:nth-child(4) {
     grid-row: 2;
     background-color: rgba(96, 107, 218, 0.4);
     grid-column: 3 / span 1;
-    margin-bottom: 10px;
-    border-radius: 100px;
+    margin-bottom: 1%;
+    border-radius: 100vh;
   }
 
   .text {
@@ -94,10 +95,10 @@
   }
 
   .grid-item img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
+    height: 175vh;
+    width: 41vh;
   }
+
   .text:nth-child(n+2) {
     font-family: "Times New Roman", Times, serif;
   }
@@ -112,12 +113,44 @@
   }
 
   .flex>.coloane {
-    flex-basis: 200px;
+    flex-basis: 20%;
     flex-grow: 1;
-    border: 1px solid blue;
-    padding: 2px;
-    min-width: 200px;
+    border: 0.1vh solid blue;
+    padding: 0.2%;
+    min-width: 20%;
     height: auto;
-    min-height:300px;
+    min-height:50vh;
     background-color: rgba(255, 134, 71, 0.4)
+  }
+  .dropbtn{
+    background-color:rgba(249, 97, 0,0.3);
+    font-size:3vh;
+    font-weight: bold;
+    color:rgb(255, 44, 1)
+  }
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    bottom:15vh;
+    border-radius:100vh;
+    left:5%;
+  }
+  .dropdown-content {
+    display: none;
+    border-radius:60vh;
+    position: absolute;
+    min-width: 5%;
+    background-color: rgba(249, 97, 0,0.3);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    padding: 12px 16px;
+    color:rgb(255, 44, 1)
+  }
+  
+  .dropdown-content a {
+    display: block;
+    color:rgb(255, 44, 1)
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
   }
