--- a/screen2.css
+++ b/screen2.css
@@ -23,7 +23,7 @@
   .grid-container {
     display: grid;
     grid-template-columns: 20% auto 20%;
-    grid-template-rows: 17% 85%;
+    grid-template-rows: 25vh 130vh;
 
   }
 
@@ -95,8 +95,8 @@
   }
 
   .grid-item img {
-    height: 175vh;
-    width: 41vh;
+    height: 138vh;
+    width: 40vh;
   }
 
   .text:nth-child(n+2) {
@@ -131,7 +131,7 @@
   .dropdown {
     position: relative;
     display: inline-block;
-    bottom:15vh;
+    bottom:25vh;
     border-radius:100vh;
     left:5%;
   }
@@ -141,8 +141,8 @@
     position: absolute;
     min-width: 5%;
     background-color: rgba(249, 97, 0,0.3);
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    padding: 12px 16px;
+    box-shadow: 0vh 1.0610079575596818vh 2.1220159151193636vh 0px rgba(0, 0, 0, 0.2);
+    padding: 1.5915119363395225vh 2.1220159151193636vh;
     color:rgb(255, 44, 1)
   }
   
